<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_title_blue"
    android:paddingTop="@dimen/status_bar_height"
    tools:context="com.xiaohui.android.fragment.FXFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_title_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_menu_fx"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <com.shell.view.refresh.TwinklingRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_gray_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:tr_enable_loadmore="false"
        app:tr_enable_overscroll="true"
        app:tr_enable_refresh="false">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/onClick_SJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selectable_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp10">

                    <ImageView
                        android:layout_width="@dimen/dp60"
                        android:layout_height="@dimen/dp60"
                        android:src="@drawable/fx_xy" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp10"
                        android:orientation="vertical">

                        <TextView
                            style="@style/fx_tv_black_16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fx_sj" />

                        <TextView
                            style="@style/fx_tv_gray_12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/fx_sj_content" />
                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/onClick_DT"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_xt"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_xt" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_xt"
                        android:gravity="center_vertical"
                        android:text="@string/fx_dt" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_dt_content" />

                    <ImageView
                        android:id="@+id/fx_message_show"
                        android:layout_width="@dimen/dp10"
                        android:layout_height="@dimen/dp10"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/dp12"
                        android:background="@drawable/shape_xg_circle_red"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_EASY"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp0.5"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_easy"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_easy" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_easy"
                        android:gravity="center_vertical"
                        android:text="@string/fx_easy" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_easy_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_XH"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_xh"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_xh" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_xh"
                        android:gravity="center_vertical"
                        android:text="@string/fx_xh" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_xh_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_WH"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp0.5"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_wh"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_wh" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_wh"
                        android:gravity="center_vertical"
                        android:text="@string/fx_wh" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_wh_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_JF"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_jf"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_jf" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_jf"
                        android:gravity="center_vertical"
                        android:text="@string/fx_jf" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_jf_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_SHARE"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp0.5"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_share"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_share" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_share"
                        android:gravity="center_vertical"
                        android:text="@string/fx_share" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_share_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_TEACH"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp0.5"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_teach"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_teach" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_teach"
                        android:gravity="center_vertical"
                        android:text="@string/fx_teach" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_teach_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/onClick_MZX"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp0.5"
                    android:background="@drawable/selectable_background"
                    android:paddingRight="@dimen/dp10">

                    <ImageView
                        android:id="@+id/fx_mzx"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:scaleType="center"
                        android:src="@drawable/fx_mzx" />

                    <TextView
                        style="@style/fx_tv_black_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/fx_mzx"
                        android:gravity="center_vertical"
                        android:text="@string/fx_mzx" />

                    <TextView
                        style="@style/fx_tv_gray_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableRight="@drawable/fx_into"
                        android:gravity="center_vertical"
                        android:text="@string/fx_mzx_content" />

                </RelativeLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </com.shell.view.refresh.TwinklingRefreshLayout>
</android.support.design.widget.CoordinatorLayout>
