<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_title_blue"
    android:paddingTop="@dimen/status_bar_height"
    tools:context="com.xiaohui.android.fragment.XXFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_title_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_menu_xx"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18" />

            <ImageView
                android:id="@+id/onClick_HY"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentRight="true"
                android:background="@drawable/selectable_main_menu"
                android:scaleType="center"
                android:src="@drawable/message_right" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/onClick_FS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/message_fs"
                android:drawablePadding="@dimen/dp15"
                android:gravity="center_vertical"
                android:text="@string/message_fs"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_message_num_bg"
                android:gravity="center"
                android:text="15"
                android:textColor="@color/white"
                android:textSize="@dimen/sp10" />
        </RelativeLayout>

        <include layout="@layout/include_black_line" />

        <RelativeLayout
            android:id="@+id/onClick_GZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/message_gz"
                android:drawablePadding="@dimen/dp15"
                android:gravity="center_vertical"
                android:text="@string/message_gz"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
